test/frontend/pass/conditions.osl
shader foo() {
    if (true) {
    }
    if (false) {
    } else {
        if ("abcd") {
        }
    }
}
