test/frontend/fail/invalid_builtin.osl
__attribute__((builtin)) void foo() {}
shader test() {}
